<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Follow</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_secondactivity">secondActivity</string>
    <string name="welcome_logo">Welcome logo</string>
    <string name="title_activity_verification">VerificationActivity</string>
    <string name="title_activity_categories">CategoriesActivity</string>
    <string name="title_activity_event_post">EventPostActivity</string>
    <string name="title_activity_setting_menu">SettingMenuActivity</string>
    <string name="title_activity_about_follow">AboutFollowActivity</string>
    <string name="title_activity_account">AccountActivity</string>
    <string name="title_activity_delete_account">DeleteAccountActivity</string>
    <string name="phone_number">Phone Number</string>
    <string name="next">NEXT</string>
    <string name="sms_verification">SMS Verification</string>
    <string name="enter_code">Enter Code</string>
    <string name="regenerate">REGENERATE</string>
    <string name="submit">SUBMIT</string>
    <string name="corporate_name">Corporate Name</string>
    <string name="email">Email</string>
    <string name="postal_code">Postal Code</string>
    <string name="region">Region</string>
    <string name="city">City</string>
    <string name="categories">Categories</string>
    <string name="organisation">Organisation</string>
    <string name="settings">Settings</string>
    <string name="about">ABOUT</string>
    <string name="account">ACCOUNT</string>
    <string name="change_number">CHANGE NUMBER </string>
    <string name="payment_info">PAYMENT INFO</string>
    <string name="delete_account">DELETE ACCOUNT</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="upload_picture">Upload Picture</string>
    <string name="event_updates">Events/Updates</string>
    <string name="organisation_buni">BUNI</string>
    <string name="organisation_kinu">KINU</string>
    <string name="unfollow">Unfollow</string>
    <string name="follow">Follow</string>
    <string name="organisation_bonag">BONAG</string>
    <string name="number_register">Follow will send a one time SMS message to verify your phone number.Carrier service charges may apply.</string>
    <string name="number_verify">Waiting to automatically detect an SMS sent on your phone number.\n \nPlease sit back and relax. We will notify you when we are done verifying.</string>
    <string name="title_activity_admin">AdminActivity</string>
    <string name="title_activity_organisation">OrganisationActivity</string>
    <string name="title_activity_organisation_feeds">OrganisationFeedsActivity</string>

</resources>
