<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.senzighe.emma.follow.OrganisationActivity"
    android:padding="0dp"
    android:background="@drawable/backgroundtexture">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="#ff3fa2ff"
        android:paddingLeft="15dp"
        android:paddingTop="13dp"
        android:paddingRight="15dp"
        android:paddingBottom="13dp"
        android:id="@+id/linearLayout5">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:id="@+id/imageView18"
            android:src="@drawable/headerlogo"
            android:layout_marginRight="20dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/organisation"
            android:layout_marginRight="30dp"
            android:id="@+id/textView4"
            android:textColor="#ffffff"
            android:textSize="@dimen/abc_text_size_headline_material" />

        <ImageView
            android:layout_width="25dp"
            android:layout_height="wrap_content"
            android:id="@+id/imageView20"
            android:src="@drawable/favs"
            android:layout_marginRight="10dp" />

        <ImageView
            android:layout_width="25dp"
            android:layout_height="wrap_content"
            android:id="@+id/imageView19"
            android:src="@drawable/addfav" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/linearLayout5"
        android:layout_alignLeft="@+id/linearLayout5"
        android:layout_alignStart="@+id/linearLayout5"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingTop="20dp"
        android:weightSum="1"
        android:layout_marginBottom="40dp">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="70dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/organisation_buni"
                android:id="@+id/textViewPlace1"
                style="@style/heads"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginStart="109dp"
                android:layout_marginLeft="80dp"
                android:layout_marginTop="20dp" />

            <ImageButton
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:id="@+id/imageButtonLogo1"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentBottom="true"
                android:layout_alignParentTop="true"
                android:background="@drawable/inputs" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="19dp"
                android:id="@+id/editText1"
                android:layout_alignParentBottom="true"
                android:layout_toRightOf="@+id/imageButtonLogo1"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />

            <ImageButton
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:id="@+id/imageButton1"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="10dp"
                android:src="@drawable/unchecked"
                android:background="@drawable/backgroundtexture" />


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="70dp"
            android:layout_marginTop="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/organisation_kinu"
                android:id="@+id/textViewPlace2"
                style="@style/heads"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginStart="109dp"
                android:layout_marginLeft="80dp"
                android:layout_marginTop="20dp" />

            <ImageButton
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:id="@+id/imageButtonLogo2"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentBottom="true"
                android:layout_alignParentTop="true"
                android:background="@drawable/inputs" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="19dp"
                android:id="@+id/editText2"
                android:layout_alignParentBottom="true"
                android:layout_toRightOf="@+id/imageButtonLogo2"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />

            <ImageButton
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:id="@+id/imageButton2"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="10dp"
                android:src="@drawable/unchecked"
                android:background="@drawable/backgroundtexture" />


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="70dp"
            android:layout_marginTop="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/organisation_bonag"
                android:id="@+id/textViewPlace3"
                style="@style/heads"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginStart="109dp"
                android:layout_marginLeft="80dp"
                android:layout_marginTop="20dp" />

            <ImageButton
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:id="@+id/imageButtonLogo3"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentBottom="true"
                android:layout_alignParentTop="true"
                android:background="@drawable/inputs" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="19dp"
                android:id="@+id/editText3"
                android:layout_alignParentBottom="true"
                android:layout_toRightOf="@+id/imageButtonLogo3"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />

            <ImageButton
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:id="@+id/imageButton3"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="10dp"
                android:src="@drawable/unchecked"
                android:background="@drawable/backgroundtexture" />


        </RelativeLayout>


    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="36dp"
        android:id="@+id/followbutton1"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/follow"
            android:id="@+id/nextButton"
            android:layout_gravity="center_horizontal"
            android:background="#ff3fa2ff"
            android:textColor="#ffffffff" />
    </LinearLayout>


</RelativeLayout>
